--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
 
 subprojects {
     group = 'org.bubenheimer.instancelimit'
-    version = '1.0.0'
+    version = '1.1.0-SNAPSHOT'
 
     ext {
         pomConfig = {
