--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,20 @@
 # limitations under the License.
 #
 
-android.useAndroidX=true
+org.gradle.jvmargs=-Xms384m -Xmx384m -XX:MaxMetaspaceSize=512m -XX:+UseG1GC
 
-org.gradle.jvmargs=-Xmx2g
+kotlin.daemon.jvmargs=-Xms96m -Xmx96m -XX:MaxMetaspaceSize=128m -XX:+UseG1GC
+
+org.gradle.daemon=true
+
+org.gradle.caching=true
+
+org.gradle.configuration-cache=true
+
+org.gradle.parallel=true
+
+org.gradle.configureondemand=true
+
+kotlin.incremental=true
+
+android.useAndroidX=true
