--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -28,8 +28,12 @@ plugins {
 }
 
 java {
-    sourceCompatibility = libs.versions.java.get()
-    targetCompatibility = libs.versions.java.get()
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(libs.versions.java.toolchain.get())
+    }
+
+    sourceCompatibility = libs.versions.java.source.get()
+    targetCompatibility = libs.versions.java.source.get()
 
     withJavadocJar()
     withSourcesJar()
@@ -37,7 +41,7 @@ java {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
-        jvmTarget = libs.versions.java.get()
+        jvmTarget = libs.versions.java.source.get()
     }
 }
 
