Force KSP2 usage

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,3 +31,8 @@ org.gradle.configureondemand=true
 kotlin.incremental=true
 
 android.useAndroidX=true
+
+# whether to use KSP2
+ksp.useKSP2=true
+
+kotlin.jvm.target.validation.mode=error
