Improve build config

--- a/api-android/build.gradle
+++ b/api-android/build.gradle
@@ -1,3 +1,6 @@
+import org.jetbrains.kotlin.gradle.dsl.ExplicitApiMode
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+
 /*
  * Copyright (c) 2015-2023 Uli Bubenheimer
  *
@@ -28,6 +31,14 @@ java {
     }
 }
 
+kotlin {
+    explicitApi = ExplicitApiMode.Strict // applied to only non-test compilations
+
+    compilerOptions {
+        jvmTarget = JvmTarget.fromTarget(libs.versions.java.source.get())
+    }
+}
+
 android {
     namespace "org.bubenheimer.instancelimit"
 
@@ -48,11 +59,6 @@ android {
         versionName version
     }
 
-    kotlinOptions {
-        jvmTarget = libs.versions.java.source.get()
-        freeCompilerArgs = ["-Xexplicit-api=strict"]
-    }
-
     variantFilter { variant ->
         if (getBuildType().getName() == "release") {
             setIgnore(true)
@@ -64,12 +70,6 @@ android {
             withJavadocJar()
             withSourcesJar()
         }
-    }
-}
-
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        jvmTarget = libs.versions.java.source.get()
     }
 }
 
