Clean up .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
+.DS_Store
+.externalNativeBuild
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+/.idea/AndroidProjectSystem.xml
+/.idea/androidTestResultsUserPreferences.xml
+/.idea/assetWizardSettings.xml
 /.idea/caches
+/.idea/deploymentTargetDropDown.xml
+/.idea/deviceManager.xml
+/.idea/gradle.xml
+/.idea/libraries
+/.idea/misc.xml
 /.idea/modules.xml
 /.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
+/.idea/runConfigurations.xml
+/.idea/shelf/
+/.idea/workspace.xml
 /build
+/local.properties
 *.iml
-.externalNativeBuild
