--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 
-android-plugin = '8.12.0'
+android-plugin = '8.13.0'
 
 android-sdk-compile = '36'
 android-sdk-min = '21'
@@ -14,11 +14,11 @@ java-toolchain = '21'
 
 junit = '4.13.2'
 
-kotlin = '2.2.0'
+kotlin = '2.2.21'
 
-ksp = '2.2.0-2.0.2'
+ksp = '2.3.1'
 
-mockk = '1.14.5'
+mockk = '1.14.6'
 
 
 [libraries]
