--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,18 @@
 /.idea/androidTestResultsUserPreferences.xml
 /.idea/assetWizardSettings.xml
 /.idea/caches
+/.idea/compiler.xml
 /.idea/deploymentTargetDropDown.xml
 /.idea/deviceManager.xml
 /.idea/gradle.xml
+/.idea/kotlinc.xml
 /.idea/libraries
 /.idea/misc.xml
 /.idea/modules.xml
 /.idea/navEditor.xml
 /.idea/runConfigurations.xml
 /.idea/shelf/
+/.idea/vcs.xml
 /.idea/workspace.xml
 /.kotlin/
 /build
