Switch buildSrc to build-logic due to latent AGP bugs

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,4 +40,10 @@ mockk = { module = 'io.mockk:mockk', version.ref = 'mockk' }
 
 [plugins]
 
+android-library = { id = 'com.android.library', version.ref = 'android-plugin' }
+
+kotlin-android = { id = 'org.jetbrains.kotlin.android', version.ref = 'kotlin' }
+
+kotlin-jvm = { id = 'org.jetbrains.kotlin.jvm', version.ref = 'kotlin' }
+
 ksp = { id = 'com.google.devtools.ksp', version.ref = 'ksp' }
